# Secret-Manager

./: LICENSE  README.md  pyproject.toml
secret_manager/: cli.py
secret_manager/core/: __init__.py  constants.py  projects.py  remotes.py  schemas.py  secrets.py
secret_manager/storage/: __init__.py  base.py  local.py  registry.py  s3.py
secret_manager/utils/: __init__.py  aws_profiles.py  diff.py  logger.py  selection.py
secret_manager/wizards/: __init__.py  project.py  remote.py
